Fix scroll version mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -753,7 +753,7 @@ footer div ul li a {
 @media only screen and (max-width : 767px) 
 {
     body {
-        width:auto;
+        width:100%;
         padding-top:20px;
         margin:auto;
         padding:0;  
@@ -761,7 +761,7 @@ footer div ul li a {
 
     .container {
         padding:0px 0px;
-        width:355px;
+        width:100%;
     }
 
     #hebergementlink ,#activitélink {
@@ -770,7 +770,7 @@ footer div ul li a {
 
     header {
         display:flex;
-        width:375px;
+        width:auto;
         flex-wrap:wrap;
         justify-content: space-between;
         }
@@ -783,12 +783,13 @@ footer div ul li a {
     .onlymobile {
         display:flex;
         order:3;
-        width:375px;
-        justify-content: space-around;
+        width:auto;
+        justify-content: space-between;
+        width:100%;
         
     }
     .soulignement {
-        width:187.5px;
+        width:50%;
         text-align:center;
         border-bottom:3px solid #F2F2F2;
         padding-bottom:10px;
@@ -811,13 +812,15 @@ footer div ul li a {
     }
 
     #top{
-        padding:10px 20px 0 20px;
-        width:335px;
+        box-sizing: border-box;
+        padding:10px 0px 0 0px;
+        width:95%;
+        margin:auto;
         
     }
     
     #search {
-        width:375px;
+        width:100%;
         margin-top:30px;
     }
     #boutonsearch {
@@ -839,7 +842,7 @@ footer div ul li a {
         flex-direction: column;
         justify-content: right;
         align-items: flex-start;
-        width:375px;
+        width:100%;
 
     }
     #buttons {
@@ -861,11 +864,15 @@ footer div ul li a {
     }
     #info {
         align-items: flex-start;
+        width:100%;
+        padding:0;
+        margin:0;
+        
     }
     #info h4 {
         word-wrap: break-word;
         margin:0;
-        width:300px;
+        width:100%;
         margin-right:25px;
         height:25px;
         margin-bottom:40px;
@@ -875,8 +882,10 @@ footer div ul li a {
     
     
     #hebergements {
+        box-sizing: border-box;
         flex-direction: column;
-        width:315px;
+        width:100%;
+        
         height:auto;
     }
     #hebergements article h3 {
@@ -885,7 +894,7 @@ footer div ul li a {
         padding:0;
     }
     article {
-        width:375px;
+        width:100%;
         padding:0;
         margin:0;
         order:2;
@@ -894,9 +903,10 @@ footer div ul li a {
     }
 
     #hebergementcontent {
-        width:355px;
+        width:95%;
+        margin:auto;
         flex-direction: column;
-        padding-left:20px;
+        padding:0px;
         padding-top:15px;
         padding-bottom:50px;
     }
@@ -933,41 +943,51 @@ footer div ul li a {
     }
     aside {
         order:1;
-        width:335px;
-        padding:10px 20px 35px 20px;
+        width:100%;
+        padding:10px 0px 35px 0px;
         border-radius: 0px;
+        
     }
     .pophotel {
-        margin: 0 0px 10px 0px;
-        width:335px;
+        margin:auto;
+        margin-bottom:10px;
+        width:90%;
     }
-
+    #title {
+        
+        margin-left:20px;
+    }
     .pophotelname {
         padding:0;
-        width:185px;
+        width:186px;
         height:121px;
         padding-bottom:15px;
-        padding-left:15px
+        padding-left:15px;
+        margin:auto;
     }
     #activités {
-        width:335px;
-        margin-top:60px;
-        padding:0 20px 0 20px;
-     
+        width:100%;
+        margin-top:60px;   
     }
-    #activité {
-        width:375px;
+    #activités h1 {
+        width:90%;
+        margin:auto;
+        margin-bottom:25px;
+    }
+    #activité{
+        width:90%;
         height:auto;
         display:flex;
         flex-direction: column;
+        margin:auto;
     }
     #activité a {
-        width:335px;
+        width:320px;
         height:190px;
         margin-bottom:20px;
     }
     #activité h3 {
-        width:335px;
+        width:320px;
     }
     footer {
         width:100%;
@@ -975,7 +995,7 @@ footer div ul li a {
     }
 
     footer div {
-        width:375px;
+        width:100%;
         flex-direction: column;
     }
     .espaceliste{
